[package]
name = "libra-rosetta-proxy"
version = "1.0.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
hex = "0.4"
futures = "0.3"
lcs = { package = "libra-canonical-serialization", version = "0.1.0", git = "https://github.com/libra/libra", rev="de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
libra-crypto = { version = "0.1.0", git = "https://github.com/libra/libra", rev = "de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
libra-json-rpc-client = { version = "0.1.0", git = "https://github.com/libra/libra", rev = "de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
libra-types = { version = "0.1.0", git = "https://github.com/libra/libra", rev = "de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
log = "0.4"
move-core-types = { version = "0.1.0", git = "https://github.com/libra/libra", rev = "de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
once_cell = "1.4"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
transaction-builder-generated = { version = "0.1.0", git = "https://github.com/libra/libra", rev = "de85c19e43198fcc5df1464171b6ee47ede3a7ed" }
url = "2.1"
warp = "0.2"
